--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "jest-process-manager",
+  "name": "@animech-public/jest-process-manager",
   "description": "Starts a server before your Jest tests and tears it down after.",
   "version": "0.4.0",
   "main": "lib/index.js",
   "types": "src/types.d.ts",
   "repository": "https://github.com/playwright-community/jest-process-manager",
-  "author": "Playwright Community",
+  "author": "Animech Technologies",
   "license": "MIT",
   "keywords": [
     "jest",
