--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "prebuild": "rm -rf lib/",
-    "prepublishOnly": "yarn build",
+    "prepublishOnly": "npm run build",
     "build": "tsc",
     "dev": "tsc --watch",
     "lint": "tsc --noEmit"
